@@ -21,9 +21,7 @@ import au.gov.asd.tac.constellation.help.utilities.toc.TOCItem;
 import au.gov.asd.tac.constellation.help.utilities.toc.TreeNode;
 import java.io.File;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -124,17 +122,16 @@ public class Generator implements Runnable {
             splitUserDir = Arrays.copyOfRange(splitUserDir, 0, splitUserDir.length - 1);
 
             baseDirectory = String.join(sep, splitUserDir) + sep;
-        } catch (final URISyntaxException | MalformedURLException ex) {
+        } catch (final IllegalArgumentException ex) {
             LOGGER.log(Level.SEVERE, "There was a problem retrieving the base directory for launching Offline Help.", ex);
         }
         return baseDirectory;
     }
 
-    protected static String getResource() throws MalformedURLException, URISyntaxException {
+    protected static String getResource() throws IllegalArgumentException {
         final URL sourceLocation = Generator.class.getProtectionDomain().getCodeSource().getLocation();
         final String pathLoc = sourceLocation.getPath();
-        final URL url = new URL(pathLoc);
-        final URI uri = url.toURI();
+        final URI uri = URI.create(pathLoc);
         final Path path = Paths.get(uri);
         final int jarIx = path.toString().lastIndexOf(File.separator);
         final String newPath = jarIx > -1 ? path.toString().substring(0, jarIx) : "";
